--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,46 @@
 
 /* Your CSS Code here. */
+body{
+	font-family:Arial, sans-serif;
+}
+form{
+	width:50%;
+	margin:40px auto;
+	padding:20px;
+	border:1px solid #ccc;
+	border-radius:10px;
+	box-shadow:0 0 10px black;
+}
+
+label {
+            display: block;
+            margin-bottom: 10px;
+        }
+        input[type="text"], input[type="tel"], select {
+            width: 100%;
+            height: 40px;
+            margin-bottom: 20px;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+
+select {
+            padding: 10px 15px;
+        }
+        input[type="checkbox"] {
+            margin-bottom: 20px;
+        }
+        input[type="submit"] {
+            width: 100%;
+            height: 40px;
+            background-color: #4CAF50;
+            color: #fff;
+            padding: 10px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        input[type="submit"]:hover {
+            background-color: #3e8e41;
+        }
