--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,14 @@
 
 /* Your CSS Code here. */
 body{
-	font-family:Arial, sans-serif;
+	font-family: Arial, sans-serif;
 }
 form{
 	width:60%;
 	margin:40px auto;
 	padding:20px;
-	border:1px solid #ccc;
+	border:1px solid black;
 	border-radius:10px;
-	box-shadow:0 0 10px black;
 }
 
 label {
@@ -33,7 +32,7 @@ input[type="checkbox"] {
 	margin-bottom: 20px;
 }
  input[type="submit"] {
-	width: 100%;
+	width: auto;
     height: 40px;
     background-color: #4CAF50;
 	color: #fff;
@@ -43,6 +42,3 @@ input[type="checkbox"] {
     cursor: pointer;
 }
 
-input[type="submit"]:hover {
-	background-color: #3e8e41;
-}
